K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template: 
    metadata:
      labels:
        app: commandservice
    spec: 
      containers:
        - name: commandservice
          image: nikitauljo9/commandservice:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: commands-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
