K8S/mongo-plat-debl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
          - mountPath: /var/opt/mongo/data
            name: mongodb
      volumes:
      - name: mongodb
        persistentVolumeClaim:
          claimName: mongo-claim
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - name: mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-loadbalancer
spec: 
  type: LoadBalancer
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
