K8S/postgresql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - mountPath: /var/opt/postgresql/data
            name: postgresqldb
      volumes:
      - name: postgresqldb
        persistentVolumeClaim:
          claimName: postgresql-claim
---
apiVersion: v1
kind: Service
metadata: 
  name: postgresql-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata: 
  name: postgresql-loadbalancer
spec: 
  type: LoadBalancer
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
